[gd_scene load_steps=3 format=3 uid="uid://snxvsd6mie3v"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu.gd" id="1_r316d"]
[ext_resource type="PackedScene" uid="uid://b1f0drmkeq68x" path="res://scenes/ui/settings_menu.tscn" id="2_v1pde"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_r316d")

[node name="main" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -91.5
offset_right = 58.0
offset_bottom = 91.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="main"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="main/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="main/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="main/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Paused"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="main/PanelContainer/MarginContainer/VBoxContainer" groups=["Pause_Menu"]]
layout_mode = 2
size_flags_vertical = 3
text = "Continue"

[node name="SettingsButton" type="Button" parent="main/PanelContainer/MarginContainer/VBoxContainer" groups=["Pause_Menu"]]
layout_mode = 2
text = "Settings"

[node name="EndRunButton" type="Button" parent="main/PanelContainer/MarginContainer/VBoxContainer" groups=["Pause_Menu"]]
layout_mode = 2
text = "End Run"

[node name="SettingsMenu" parent="." instance=ExtResource("2_v1pde")]
visible = false
offset_left = -22.5
offset_right = 22.5

[node name="BackButton" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_top = 221.0
offset_right = 45.0
offset_bottom = 252.0
size_flags_vertical = 3
text = "Back"

[connection signal="pressed" from="main/PanelContainer/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="main/PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="main/PanelContainer/MarginContainer/VBoxContainer/EndRunButton" to="." method="_on_end_run_button_pressed"]
[connection signal="pressed" from="SettingsMenu/BackButton" to="." method="_on_back_button_pressed"]
